# Uamp

./: .gitignore  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.cpp
app/resources/: resources.qrc
app/src/: CMakeLists.txt  album.cpp  album.h  album.ui  img.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  message.ui  model.cpp  model.h  preferences.cpp  preferences.h  preferences.ui  songlist.cpp  songlist.h  timer.cpp  timer.h  timer.ui  volume.cpp  volume.h  volume.ui
